# kanflow2.0

./: .eslintrc.json  .gitignore  README.md  biome.json  bun.lockb  drizzle.config.ts  next.config.js  package.json  tailwind.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml
actions/auth/: guestLogin.ts  login.ts  logout.ts  register.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/auth/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/learnmore/: layout.tsx  page.tsx
components/auth/: login-form.tsx  logout-button.tsx  register-form.tsx
components/dashboard/: board-metadata-hover.tsx  command-dialog.tsx  create-board-dialog.tsx  date-picker.tsx  header.tsx  nav-boards.tsx  nav-user.tsx  recent-tasks.tsx  shell.tsx  sidebar.tsx
components/kanban/: card.tsx  column.tsx
components/settings/: account-settings.tsx  application-settings.tsx  bug-report-modal.tsx  device-settings.tsx  general-settings.tsx  notification-settings.tsx  plan-settings.tsx  storage-settings.tsx
components/tasks/: label-selector.tsx  task-details-dialog.tsx  task-dialog.tsx
components/theme/: theme-toggle.tsx
components/ui/: background-gradient-animation.tsx  command.tsx  (+8 more)
context/: UserContext.tsx
drizzle/: 0001_high_shocker.sql
hooks/: get-appdata-directory.ts  use-container-size.ts  use-media-query.ts  use-toast.ts
lib/: globe.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
types/: kanban.ts
(+19 files in other folders)
